# mmllm

./: .gitignore  5_crow_pitcher_families.py  CLAUDE.md  LICENSE  README.md  WORKERS.md  modal_app.py  pyproject.toml  setup.py
.github/: FUNDING.yml
docs/: aesop-chapter-expansion-skill.md  aesop-samples.md  contribute-compute.md  corpus-mix-v2.md  fim-contribute-dogfood.md  fim-plan.md  fim-run-dogfood.md  fim-validation-runbook.md  inference-optimization.md  parallelization-and-bank-sizing.md  router-bank-lr-decoupling.md  slow-walk-budget-plan.md  spork-chain-design-banks-r91-r100.md  spork-chain-design-wave2-fim.md  spork-chain-design-wave2-generic.md  spork-chain-design-wave3-len7.md  spork-chain-diverse-dispatch-r100.md  spork-chain-diverse-dispatch-r40.md  spork-chain-diverse-dispatch-r50.md  spork-chain-diverse-dispatch-r60.md  spork-chain-diverse-dispatch-r70.md  spork-chain-diverse-dispatch-r80.md  spork-chain-diverse-dispatch-r90.md  spork-chain-diverse-dispatch.md  spork-chain-dogfood-v2.md  spork-chain-dogfood.md  spork.md  triune-brain-architecture.md  v2-real-data-findings.md
scripts/: _delta_sparse_net.py  _opt_sparse_net_chunk.py  branch_janitor.sh  build_clojure_fim_corpus.sh  build_community_corpus.py  build_distill_base.sh  build_eval_battery.sh  build_eval_battery_alternates.sh  build_fim_eval.py  build_glaive_fim_corpus.sh  build_inf_spork.sh  capture_queries.py  consolidate_siblings.py  distill_harvest.py  extend_chain.sh  generate_dispatch_prompt.py  generate_harvest_results.py  harvest_5way.py  harvest_5way_r30.py  harvest_action.sh  (+72 more)
(+897 files in other folders)
