[project]
name = "mmllm"
version = "0.0.1"
description = "mmLLM - Memory Mapped LLM"
readme = "README.md"
requires-python = ">=3.10"
license = "0BSD"
license-files = ["LICENSE"]
dependencies = [
    "basilisp >= 0.3",
    "torch >= 2.0",
    "numpy >= 1.24",
    "datasets >= 2.14",
]

[project.scripts]
mmllm = "mmllm._entry:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mmllm"]
